tests/baselines/reference/forInBreakStatements.errors.txt
tests/cases/conformance/statements/breakStatements/forInBreakStatements.ts(10,1): error TS7028: Unused label.
tests/cases/conformance/statements/breakStatements/forInBreakStatements.ts(18,5): error TS7028: Unused label.


==== tests/cases/conformance/statements/breakStatements/forInBreakStatements.ts (2 errors) ====
    for(var x in {}) {
        break;
    }
    
    ONE:
    for(var x in {}) {
        break ONE;
    }
    
    TWO:
    ~~~
!!! error TS7028: Unused label.
    THREE:
    for(var x in {}) {
        break THREE;
    }
    
    FOUR:
    for(var x in {}) {
        FIVE:
        ~~~~
!!! error TS7028: Unused label.
        for(var x in {}) {
            break FOUR;
        }
    }
    
    for(var x in {}) {
        SIX:
        for(var x in {}) break SIX;
    }
    
    SEVEN:
    for (var x in {}) for (var x in {}) for (var x in {}) break SEVEN;
    
    EIGHT:
    for (var x in {}){
        var fn = function () { }
        break EIGHT;
    }
    